Changed favicon path.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'/>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Yggdrasil Mesh</title>
-    <link rel="icon" type="image/png" href="img/mesh.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel='stylesheet' href='css/main.css'>
 </head>
 <body>
