--- a/index.html
+++ b/index.html
@@ -1,22 +1,197 @@
-<!doctype HTML>
-<html>
-<head>
-    <meta charset='utf-8'/>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Yggdrasil Mesh</title>
-    <link rel="icon" type="image/png" href="img/favicon.png">
-    <link rel='stylesheet' href='css/main.css'>
-</head>
-<body>
-<section id='welcome'>
-  <div>
-    <h1>Yggdrasil Mesh</h1>
-    <hr class='separator'/>
-    <hr class='separator'/>
-    <p class='slogan'>Fully encrypted mesh over decentralized network Yggdrasil, built by great community for people. No aliens alowed.</p>
-    <br/>
-    <p class="slogan coming">TBA</a>
-  </div>
-</section>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+
+    <head>
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Меш-сеть - устойчивая сетевая инфраструктура будущего. Wireless mesh, Meshnet, Yggdrasil, 802.11s">
+        <meta name="author" content="zhoreeq">
+        <link rel="icon" type="image/png" href="img/favicon.png">
+
+        <title>Меш-сеть - устойчивая сетевая инфраструктура будущего 🌳 🌐 Meshnet, Yggdrasil, 802.11s</title>
+
+        <!-- Bootstrap core CSS -->
+        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Custom fonts for this template -->
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+        <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+
+        <!-- Custom styles for this template -->
+        <link href="css/landing-page.min.css" rel="stylesheet">
+
+    </head>
+
+    <body>
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-light bg-light static-top">
+            <div class="container d-flex justify-content-start">
+                <a class="navbar-brand" href="#">Meshnet</a>
+                <a class="btn" href="#about">О проекте</a>
+                <!-- <a class="btn" href="#">Подключиться</a> -->
+                <!-- <a class="btn" href="#">Документация</a> -->
+                <!-- <a class="btn" href="#">Карта</a> -->
+                <a class="btn" href="#community">Сообщество</a>
+            </div>
+        </nav>
+
+        <!-- Masthead -->
+        <header class="masthead text-white text-center">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-9 mx-auto">
+                        <h1 class="mb-5">Меш-сеть - устойчивая сетевая инфраструктура будущего 🌳 🌐</h1>
+                    </div>
+                    <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+                        <a href="#community" class="btn btn-lg btn-success">Подключиться к сети</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <!-- Icons Grid -->
+        <section id="about" class="features-icons bg-light text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <div class="features-icons-icon d-flex">
+                                <i class="icon-organization m-auto text-primary"></i>
+                            </div>
+                            <h3>Глобальная устойчивая инфраструктура</h3>
+                            <p class="lead mb-0">Основанная на принципах децентрализации и самоорганизации сеть разрабатывается для обеспечения стабильной связью всех жителей Земли</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <div class="features-icons-icon d-flex">
+                                <i class="icon-shield m-auto text-primary"></i>
+                            </div>
+                            <h3>Безопасная среда передачи данных</h3>
+                            <p class="lead mb-0">Все передаваемые между узлами меш-сети данные по-умолчанию и без дополнительных настроек надежно защищены современными криптоалгоритмами</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                            <div class="features-icons-icon d-flex">
+                                <i class="icon-emotsmile m-auto text-primary"></i>
+                            </div>
+                            <h3>Открытое развитие</h3>
+                            <p class="lead mb-0">Открытый для всех процесс развития сети позволяет эффективнее распределять ценные знания и опыт в глобальном сообществе единомышленников</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Image Showcases -->
+        <section class="showcase">
+            <div class="container-fluid p-0">
+                <div class="row no-gutters">
+
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/code.jpg');"></div>
+                    <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+                        <h2>Разработка технологий будущего</h2>
+                        <p class="lead mb-0">Меш-сеть это полностью свободная от инструментов централизованного управления сетевая инфраструктура. В такой сети отсутствуют корневые серверы, магистральные операторы связи и тому подобные сущности. Ключевые свойства меш-сети: самоорганизация, легкое масштабирование и устойчивая связность.</p>
+                        <p class="lead mb-0">Сообщество Yggdrasil Mesh исследует существующие и разрабатывает новые технологические решения, которые способны обеспечивать надежной связью миллионы людей и организаций по всему Миру.</p>
+                        <p class="lead mb-0"><a href="#">Технологический стек.</a></p>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/Houses.png');"></div>
+                    <div class="col-lg-6 my-auto showcase-text">
+                        <h2>Развитие местных сообществ</h2>
+                        <p class="lead mb-0">В отличие от коммерческих и муниципальных сетей, инфраструктура Yggdrasil Mesh непосредственно принадлежит местным сообществам и волонтерам.
+                        Участники сами устанавливают узлы сети, настраивают соединения и делятся каналом связи друг с другом.
+                        </p>
+                        <p class="lead mb-0">Построенные таким образом (снизу вверх) местные независимые сегменты объединяются, образуя общемировую сеть Yggdrasil Mesh.</p>
+                        <p class="lead mb-0"><a href="https://github.com/yggdrasil-network/public-peers/blob/master/europe/russia.md">Карта сети.</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Testimonials -->
+        <section class="testimonials text-center bg-light">
+            <div class="container">
+                <h2 class="mb-5">Успешные Mesh проекты по всему миру</h2>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+                            <h5>guify.net</h5>
+                            <p class="font-weight-light mb-0">Испания. 35,000 узлов.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
+                            <h5>NYCMesh</h5>
+                            <p class="font-weight-light mb-0">США. 400 узлов в New York City.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
+                            <h5>Freifunk.net</h5>
+                            <p class="font-weight-light mb-0">Германия. 43,000 узлов.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Call to Action -->
+        <section id="community" class="call-to-action text-white text-center">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-9 mx-auto">
+                        <h2 class="mb-4">Присоединяйтесь к сообществу разработчиков Yggdrasil Mesh</h2>
+                    </div>
+                    <div class="col-xl-9 mx-auto">
+                        <a href="https://t.me/Yggdrasil_ru" class="btn btn-lg btn-primary">
+                            <i class="fab fa-telegram fa-2x fa-fw"></i>
+                        </a>
+                        <a href="https://github.com/yggdrasil-mesh" class="btn btn-lg btn-success">
+                            <i class="fab fa-github fa-2x fa-fw"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <footer class="footer bg-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+                        <p class="text-muted small mb-4 mb-lg-0">
+                             This work is licensed under a 
+                             <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Attribution-ShareAlike 2.0 Generic License</a>.
+                        </p>
+                    </div>
+                    <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item mr-3">
+                                <a href="https://t.me/Yggdrasil_ru">
+                                    <i class="fab fa-telegram fa-2x fa-fw"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#">
+                                    <i class="fab fa-github fa-2x fa-fw"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+    </body>
+
 </html>
