--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
                              This work is licensed under a 
                              <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Attribution-ShareAlike 2.0 Generic License</a>.
                         </p>
+                        <p class="text-muted small mb-4 mb-lg-0">
+                             Artwork by  
+                             <a rel="license" href="https://www.reddit.com/user/SolarPunkecokarma/">SolarPunkecokarma</a>.
+                        </p>
                     </div>
                     <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
                         <ul class="list-inline mb-0">
